podinfo/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: podinfo.light-eg.xyz
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.light-eg.xyz 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-podinfo
            port:
              number: 9898
